Thu Apr 22 18:22:27 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadAverage.cpp:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadMinimum.cpp:

          Fixed some #includes to fix some builds.

Thu Apr 22 13:21:06 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/LoadBalancer/LoadManager.cpp:

          Made a change to fix a fuzz build error.

          The change was to include a ACE_MACRO in one
          of the function calls.

Thu Apr 22 13:01:55 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/CosLoadBalancing.mpc:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadAverage.h:

          Made changes to include some files.

          This change will fix some more windows builds.

Thu Apr 22 12:53:49 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/CosLoadBalancing.mpc:

          Made a change to include the right .cpp file.

          This should fix some of the windows builds.

Thu Apr 22 12:43:33 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        *
          orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Roundtrip.cpp:
        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Roundtrip.h:
        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Test.idl:
        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/client.cpp:

          Made some changes to remove unwanted functions and function
          arguments.

Thu Apr 22 10:19:41 2004  Chad Elliott  <elliott_c@ociweb.com>

        * utils/NamingViewer/NamingViewer.mpc:

          Added vc8 to the 'specific' section that also has vc71.

Thu Apr 22 09:03:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV/Nil.{h,cpp}:
          Removed this file. It was empty, is the last issue from
          Bug 1705.

        * orbsvcs/orbsvcs/AV/MCast.cpp:
        * orbsvcs/orbsvcs/AV/RTP.cpp:
        * orbsvcs/orbsvcs/AV/Transport.cpp:
        * orbsvcs/orbsvcs/Makefile.av: