@@ -1,5 +1,4 @@
 #include "LB_CPU_Load_Average_Monitor.h"
-
 #include "tao/ORB_Constants.h"
 #include "ace/OS_NS_time.h"
 #include "ace/OS_NS_stdio.h"
